--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "socket.io-client": "^4.5.4",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.3",
+    "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
